# Threat-Intlligence-Platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.local.json
AvailableServices/ASM/: .gitignore  README.md  create_test_targets.sh  create_test_targets_simple.txt  docker-compose.tip.yml  docker-compose.yml  vulnerability_scan.py
AvailableServices/Domain Watcher/: .dockerignore  .gitignore  Dockerfile  config.example.json  docker-compose.yml  entrypoint.sh  main.py  requirements.txt  run.py  setup.sh
OpenAPI/: _build_postman.py  asm.openapi.json  auth.openapi.json  cmdb.openapi.json  domainwatch.openapi.json  flowviz.openapi.json  indicator-intel.openapi.json  integrations.openapi.json  ioc-collector.openapi.json  news-collector.openapi.json  orchestrator.openapi.json  scheduler.openapi.json  secrets.openapi.json  threat-actors.openapi.json  threat-intel.openapi.json  vuln-intel.openapi.json
OpenAPI/postman/: _unified.postman_collection.json  asm.postman_collection.json  auth.postman_collection.json  cmdb.postman_collection.json  domainwatch.postman_collection.json  flowviz.postman_collection.json  indicator-intel.postman_collection.json  integrations.postman_collection.json  ioc-collector.postman_collection.json  news-collector.postman_collection.json  orchestrator.postman_collection.json  scheduler.postman_collection.json  secrets.postman_collection.json  threat-actors.postman_collection.json  threat-intel.postman_collection.json  vuln-intel.postman_collection.json
Rapport/: acro_list.tex  main.tex  main_NEWtemplate_reference.tex
Rapport/bib/: webography.bib
docs/: README.md
docs/06_services/: README.md
frontend/: Dockerfile  package-lock.json  package.json
infra/: docker-compose.dev.yml  docker-compose.yml
prompt/: companyprofile.json  prompt.md
screenshots/: walkthrough.py
services/auth/: Dockerfile  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0001_initial.py
services/auth/app/: deps.py  main.py  models.py  schemas.py  security.py  seed.py  settings.py
services/auth/app/routes/: auth.py  jwks.py  roles.py  sessions.py  users.py
services/cmdb/: Dockerfile  pyproject.toml
services/cmdb/alembic/: env.py
services/cmdb/alembic/versions/: 0001_initial.py  0002_profile_change_log.py  0003_tag_catalog.py
services/cmdb/app/: asm_sync.py  db.py  main.py  models.py  schemas.py  settings.py
services/cmdb/app/routes/: assets.py  profile.py  tags.py
services/domainwatch/: Dockerfile  pyproject.toml
services/domainwatch/alembic/: env.py
services/domainwatch/alembic/versions/: 0001_initial.py
services/domainwatch/app/: db.py  main.py  models.py  schemas.py  settings.py
services/domainwatch/app/monitor/: check.py  jobs.py
services/domainwatch/app/routes/: check.py  domains.py
services/flowviz/: Dockerfile  pyproject.toml
services/flowviz/alembic/: env.py
services/flowviz/alembic/versions/: 0001_initial.py
services/flowviz/app/: main.py  models.py  prompts.py  schemas.py  settings.py
services/flowviz/app/routes/: flows.py
services/indicator-intel/: Dockerfile  pyproject.toml
services/indicator-intel/alembic/: env.py
services/indicator-intel/alembic/versions/: 0001_initial.py  0002_dorking.py
services/indicator-intel/app/: investigate.py  main.py  models.py  schemas.py  settings.py
services/indicator-intel/app/dorking/: __init__.py  catalog.py  duckduckgo.py  google.py  runner.py
services/indicator-intel/app/routes/: dorks.py  health.py  investigations.py
services/ioc-collector/: Dockerfile  pyproject.toml
services/ioc-collector/alembic/: env.py
services/ioc-collector/alembic/versions/: 0001_initial.py  0002_analyst_layer.py
services/ioc-collector/app/: ingest.py  main.py  models.py  schemas.py  settings.py
services/ioc-collector/app/routes/: health.py  indicators.py  ingest.py
services/ioc-collector/app/sources/: malbazaar.py  threatfox.py
services/news-collector/: Dockerfile  alembic.ini  pyproject.toml
services/news-collector/alembic/: env.py
services/news-collector/alembic/versions/: 0001_initial.py  0002_article_content_hash.py  0003_analyst_layer.py  0004_feed_tags.py
services/news-collector/app/: ingest.py  main.py  models.py  schemas.py  seed.py  settings.py
services/news-collector/app/routes/: articles.py  feeds.py  health.py  ingest.py
services/news-collector/app/sources/: __init__.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/alembic/: env.py
services/orchestrator/alembic/versions/: 0001_initial.py  0002_ai_policies.py  0003_notifications.py
services/orchestrator/app/: analysis.py  context.py  main.py  models.py  policies.py  prompts.py  schemas.py  settings.py
services/orchestrator/app/actions/: __init__.py  actor_likelihood.py  brief.py  check_kev_exploited.py  correlation.py  cve_relevance.py  extract_iocs.py  flowviz_action.py  hunting_hypothesis.py  map_ttps.py
services/orchestrator/app/notify/: __init__.py  dispatcher.py  smtp.py
services/orchestrator/app/routes/: actions.py  analyze.py  health.py  notifications.py  policies.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/alembic/: env.py
services/scheduler/alembic/versions/: 0001_initial.py
services/scheduler/app/: jobs.py  main.py  models.py  schemas.py  settings.py
services/scheduler/app/routes/: scheduler.py
services/secrets/: Dockerfile  alembic.ini  pyproject.toml
services/secrets/alembic/: env.py
services/secrets/alembic/versions/: 0001_initial.py
services/secrets/app/: crypto.py  main.py  models.py  schemas.py  settings.py
services/secrets/app/routes/: bootstrap.py  secrets.py
services/vuln-intel/: Dockerfile  pyproject.toml
services/vuln-intel/alembic/: env.py
services/vuln-intel/alembic/versions/: 0001_initial.py  0002_analyst_layer.py
services/vuln-intel/app/: db.py  main.py  models.py  prompts.py  schemas.py  settings.py
services/vuln-intel/app/routes/: cves.py  health.py  refresh.py
services/vuln-intel/app/sources/: epss.py  kev.py  nvd.py
(+433 files in other folders)
