[project]
name = "tip-platform"
version = "0.1.0"
description = "Threat Intelligence Platform — monorepo root"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["E501", "S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
