[project]
name = "tip-indicator-intel"
version = "0.1.0"
description = "AI-driven passive investigation of IPs and domains"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-whois>=0.9",
    "dnspython>=2.6",
    "tip-common @ file:///app/packages/tip_common",
    "tip-auth @ file:///app/packages/tip_auth",
    "tip-db @ file:///app/packages/tip_db",
    "tip-cache @ file:///app/packages/tip_cache",
    "tip-http @ file:///app/packages/tip_http",
    "tip-source-health @ file:///app/packages/tip_source_health",
    "tip-schemas @ file:///app/packages/tip_schemas",
    "tip-ai @ file:///app/packages/tip_ai",
    "tip-secrets @ file:///app/packages/tip_secrets",
]

[tool.setuptools.packages.find]
include = ["app*"]
