[project]
name = "tip-ioc-collector"
version = "0.1.0"
description = "IOC ingestion from ThreatFox, MalBazaar, OTX"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tip-common @ file:///app/packages/tip_common",
    "tip-auth @ file:///app/packages/tip_auth",
    "tip-db @ file:///app/packages/tip_db",
    "tip-cache @ file:///app/packages/tip_cache",
    "tip-http @ file:///app/packages/tip_http",
    "tip-source-health @ file:///app/packages/tip_source_health",
    "tip-schemas @ file:///app/packages/tip_schemas",
    "tip-secrets @ file:///app/packages/tip_secrets",
]

[tool.setuptools.packages.find]
include = ["app*"]
