[project]
name = "tip-news-collector"
version = "0.1.0"
description = "RSS/feed ingestion for security news + AI insights"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "feedparser>=6.0",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tip-common @ file:///app/packages/tip_common",
    "tip-auth @ file:///app/packages/tip_auth",
    "tip-db @ file:///app/packages/tip_db",
    "tip-cache @ file:///app/packages/tip_cache",
    "tip-http @ file:///app/packages/tip_http",
    "tip-source-health @ file:///app/packages/tip_source_health",
    "tip-schemas @ file:///app/packages/tip_schemas",
    "tip-ai @ file:///app/packages/tip_ai",
    "tip-secrets @ file:///app/packages/tip_secrets",
]

[tool.setuptools.packages.find]
include = ["app*"]
