[project]
name = "tip-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.0",
    "tip-common @ file:///app/packages/tip_common",
    "tip-auth @ file:///app/packages/tip_auth",
    "tip-db @ file:///app/packages/tip_db",
    "tip-cache @ file:///app/packages/tip_cache",
    "tip-http @ file:///app/packages/tip_http",
    "tip-secrets @ file:///app/packages/tip_secrets",
]

[tool.setuptools.packages.find]
include = ["app*"]
